--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,7 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^9.0.3",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.38.6",
     "wagmi": "^2.19.2"
