--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,7 +26,8 @@
     "react-markdown": "^9.0.3",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.38.6",
-    "wagmi": "^2.19.2"
+    "wagmi": "^2.19.2",
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -38,5 +39,9 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "valtio": "^2.0.0",
+    "use-sync-external-store": "^1.3.0"
   }
 }
