--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -1,14 +1,14 @@
- [profile.default]
- src = "src"
- out = "out"
- libs = ["lib"]
- optimizer = true
- optimizer_runs = 200
- solc_version = "0.8.24"
- evm_version = "paris"
+[profile.default]
+src = 'src'
+out = 'out'
+libs = ["dependencies"]
+solc = "0.8.25"
 
- [fmt]
- line_length = 100
- multiline_func_header = "attributes_first"
+[soldeer]
+recursive_deps = true
 
-
+[dependencies]
+forge-std = { version = "1.11.0" }
+tokenized-strategy = { version = "3.0.4", git = "https://github.com/yearn/tokenized-strategy", tag = "v3.0.4" }
+tokenized-strategy-periphery = { version = "3.0.2", git = "https://github.com/yearn/tokenized-strategy-periphery", tag = "v3.0.2" }
+"@openzeppelin-contracts" = "5.5.0"
